--- a/index.html
+++ b/index.html
@@ -4,11 +4,11 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 	<meta http-equiv="Content-Type" content="text/html;charset=UTF-8"/>
 	<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-	<title>Реестр проектов и мероприятий</title>
+	<title>Мой прототип</title>
 </head>
 
 <!-- UI Content -->
 <body class="sapUiBody" id="content">
-	<text> Реестр проектов и мероприятий</text>
+	<text>Мой прототип</text>
 </body>
 </html>
